# photosite

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .swcrc  Makefile  README.md  cli-test.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt
googlephotos/: admin.py  apps.py  blocks.py  exceptions.py  google.py  middleware.py  models.py  urls.py  views.py  wagtail_hooks.py
googlephotos/migrations/: 0001_initial.py  0002_token.py  0003_alter_token_expires_at.py  0004_delete_credentials.py  0005_alter_album_uid.py  0006_photo_album.py  0007_photo_image.py  0008_albumpage_remove_photo_image_photo_photo.py  0009_alter_photo_photo.py  0010_photo_show.py  0011_albumpage_album.py  0012_photo_creationtime.py  0013_alter_photo_options.py
googlephotos/templates/googlephotos/: album.html  album_page.html  albums.html  auth.html  callback.html
googlephotos/templates/googlephotos/blocks/: album-list.html
home/: models.py
home/migrations/: 0003_homepage_body.py  0004_homepage_content.py  0005_remove_homepage_body.py
home/templates/home/: home_page.html
photosite/: urls.py  wsgi.py
photosite/assets/css/: photosite.css
photosite/assets/css/partials/: __variables.css  _typography.css  album.css  base.css  lightbox.css  typography.css
photosite/assets/ts/: masonry.ts
photosite/settings/: base.py  dev.py  static.py
photosite/static/css/: photosite.css  photosite.css.map  photosite.min.css  photosite.min.css.map
photosite/static/js/: masonry.js  masonry.min.js
photosite/templates/: base.html
